use api instead of sqlite db copy

--- a/Management/ght.toml.dist
+++ b/Management/ght.toml.dist
@@ -2,6 +2,9 @@
 path="/tmp/"
 [garradin]
 db_path="../../ghtfact/association.sqlite"
+url="https://asso.hapkido-toulouse.fr"
+user=''
+passwd=""
 [ght]
 adresse1="1 impasse du parc de Claire, appartement 11"
 adresse2="31200 TOULOUSE"
